--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </h2>
       <span class="header__rec" aria-hidden="true">rec</span>
     </header>
-    <main>
+    <main class="main">
       <section class="section">
         <h2 class="section__card-title">Почему сосредоточиться так сложно</h2>
         <article class="section__card">
