--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
               её просто не существует. Исследователи
-              <a class="section__card-link" href="#0">выяснили</a>, что мозгу
+              <a class="section__card-link" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу
               тяжело концентрироваться даже на двух делах одновременно. А когда
               в поле внимания попадает несколько важных задач, организм паникует
               и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого
