--- a/index.html
+++ b/index.html
@@ -62,11 +62,16 @@
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
               её просто не существует. Исследователи
-              <a class="section__card-link" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу
-              тяжело концентрироваться даже на двух делах одновременно. А когда
-              в поле внимания попадает несколько важных задач, организм паникует
-              и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого
-              мы работаем невнимательно: ошибаемся и быстро устаём.
+              <a
+                class="section__card-link"
+                href="https://dana.org/article/multicosts-of-multitasking/"
+                target="_blank"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
             </p>
           </article>
           <article class="section__card">
@@ -193,33 +198,43 @@
       <section class="section">
         <article class="section__card">
           <h2 class="section__card-subtitle">А можно в картинках?</h2>
-          <div class="section_container">
-            <img
-              class="section__card-image"
-              src="./images/sunset.png"
-              alt="Рассвет за горами"
-            />
-            <img
-              class="section__card-image"
-              src="./images/ice-cream.png"
-              alt="Четыре шарика мороженного в миске"
-            />
-            <img
-              class="section__card-image"
-              src="./images/tape.png"
-              alt="Кассета"
-            />
-            <img
-              class="section__card-image"
-              src="./images/books.png"
-              alt="Стопка книг"
-            />
-            <img
-              class="section__card-image"
-              src="./images/street.png"
-              alt="Улица"
-            />
-          </div>
+          <ul class="section_container">
+            <li class="section__list">
+              <img
+                class="section__card-image"
+                src="./images/sunset.png"
+                alt="Рассвет за горами"
+              />
+            </li>
+            <li class="section__list">
+              <img
+                class="section__card-image"
+                src="./images/ice-cream.png"
+                alt="Четыре шарика мороженного в миске"
+              />
+            </li>
+            <li class="section__list">
+              <img
+                class="section__card-image"
+                src="./images/tape.png"
+                alt="Кассета"
+              />
+            </li>
+            <li class="section__list">
+              <img
+                class="section__card-image"
+                src="./images/books.png"
+                alt="Стопка книг"
+              />
+            </li>
+            <li class="section__list">
+              <img
+                class="section__card-image"
+                src="./images/street.png"
+                alt="Улица"
+              />
+            </li>
+          </ul>
         </article>
       </section>
     </main>
