--- a/index.html
+++ b/index.html
@@ -198,43 +198,33 @@
       <section class="section">
         <article class="section__card">
           <h2 class="section__card-subtitle">А можно в картинках?</h2>
-          <ul class="section_container">
-            <li class="section__list">
-              <img
-                class="section__card-image"
-                src="./images/sunset.png"
-                alt="Рассвет за горами"
-              />
-            </li>
-            <li class="section__list">
-              <img
-                class="section__card-image"
-                src="./images/ice-cream.png"
-                alt="Четыре шарика мороженного в миске"
-              />
-            </li>
-            <li class="section__list">
-              <img
-                class="section__card-image"
-                src="./images/tape.png"
-                alt="Кассета"
-              />
-            </li>
-            <li class="section__list">
-              <img
-                class="section__card-image"
-                src="./images/books.png"
-                alt="Стопка книг"
-              />
-            </li>
-            <li class="section__list">
-              <img
-                class="section__card-image"
-                src="./images/street.png"
-                alt="Улица"
-              />
-            </li>
-          </ul>
+          <div class="section_container"> 
+            <img 
+              class="section__card-image" 
+              src="./images/sunset.png" 
+              alt="Рассвет за горами" 
+            /> 
+            <img 
+              class="section__card-image" 
+              src="./images/ice-cream.png" 
+              alt="Четыре шарика мороженного в миске" 
+            /> 
+            <img 
+              class="section__card-image" 
+              src="./images/tape.png" 
+              alt="Кассета" 
+            /> 
+            <img 
+              class="section__card-image" 
+              src="./images/books.png" 
+              alt="Стопка книг" 
+            /> 
+            <img 
+              class="section__card-image" 
+              src="./images/street.png" 
+              alt="Улица" 
+            /> 
+          </div>
         </article>
       </section>
     </main>
