--- a/index.html
+++ b/index.html
@@ -167,12 +167,16 @@
             <h4 class="section__card-subtitle-extra">Прогуляйтесь</h4>
             <p class="section__card-text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-              показал, что созерцание природы повышает концентрацию, в то время
-              как после просмотра городских пейзажей она наоборот понижается.
-              Можно совместить прогулку с физическими упражнениями или бегом —
-              так в мозг поступит ещё больше кислорода и он будет лучше
-              работать. Но и простая двадцатиминутная прогулка — тоже отличный
-              вариант.
+              <a
+                class="section__card-link"
+                href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                target="_blank"
+                >показал</a
+              >, что созерцание природы повышает концентрацию, в то время как
+              после просмотра городских пейзажей она наоборот понижается. Можно
+              совместить прогулку с физическими упражнениями или бегом — так в
+              мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+              простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
           </article>
           <article class="section__card">
@@ -198,32 +202,32 @@
       <section class="section">
         <article class="section__card">
           <h2 class="section__card-subtitle">А можно в картинках?</h2>
-          <div class="section_container"> 
-            <img 
-              class="section__card-image" 
-              src="./images/sunset.png" 
-              alt="Рассвет за горами" 
-            /> 
-            <img 
-              class="section__card-image" 
-              src="./images/ice-cream.png" 
-              alt="Четыре шарика мороженного в миске" 
-            /> 
-            <img 
-              class="section__card-image" 
-              src="./images/tape.png" 
-              alt="Кассета" 
-            /> 
-            <img 
-              class="section__card-image" 
-              src="./images/books.png" 
-              alt="Стопка книг" 
-            /> 
-            <img 
-              class="section__card-image" 
-              src="./images/street.png" 
-              alt="Улица" 
-            /> 
+          <div class="section_container">
+            <img
+              class="section__card-image"
+              src="./images/sunset.png"
+              alt="Рассвет за горами"
+            />
+            <img
+              class="section__card-image"
+              src="./images/ice-cream.png"
+              alt="Четыре шарика мороженного в миске"
+            />
+            <img
+              class="section__card-image"
+              src="./images/tape.png"
+              alt="Кассета"
+            />
+            <img
+              class="section__card-image"
+              src="./images/books.png"
+              alt="Стопка книг"
+            />
+            <img
+              class="section__card-image"
+              src="./images/street.png"
+              alt="Улица"
+            />
           </div>
         </article>
       </section>
